# OffscreenRenderer

./: .gitignore  Buffers.hh  CGLWrapper.hh  CGLWrapper.inl  CMakeLists.txt  EGLWrapper.hh  EGLWrapper.inl  GLErrors.hh  GLTypeTraits.hh  OSMesaWrapper.hh  OSMesaWrapper.inl  OpenGLContext.hh  RAIIGLResource.hh  README.md  Shader.hh  UASetters.hh  demo.cc  demo.frag  demo.vert  write_png.h
cmake/: FindOSMesa.cmake
python/: .nfs0000000002bab6ee0002e387  Demo.ipynb  MeshDemo.ipynb  OffscreenRenderer.py  colors.py  offscreen_renderer.py  video_writer.py
python_bindings/: CMakeLists.txt  offscreen_renderer.cc  py_gl_enum.inl  py_offscreen_renderer.cc
shaders/: demo.frag  demo.vert  phong_with_wireframe.frag  phong_with_wireframe.vert  phong_with_wireframe_ssao.frag  vector_field.frag  vector_field.vert
src/OffscreenRenderer/: .CMakeLists.txt.swp  Buffers.hh  CGLWrapper.inl  CMakeLists.txt  EGLWrapper.inl  GLTypeTraits.hh  OSMesaWrapper.inl  OpenGLContext.hh  RAIIGLResource.hh  Shader.hh  UASetters.hh  demo.cc  demo_multicontext.cc  test_osmesa.cc
src/python_bindings/: CMakeLists.txt  offscreen_renderer.cc
